# CityGrids

./: .gitignore  CMakeLists.txt
src/: CityFactory.h  CityFactory_Grid.cpp  CityFactory_Grid.h  CityMaker_CMDLine.cpp  Color.h  Converter.cpp  Converter.h  Printer.h  Printer_CMDLine.cpp  Printer_Graphic.cpp  Printer_Graphic.h  ResidentsFactory.h  ResidentsFactory_Flat.cpp  ResidentsFactory_Flat.h  ResidentsMaker_CMDLine.cpp  main.cpp  renderer.cpp  renderer.h
tests/: test_Converter.cpp
